# csc201ja22demo

./: .replit  CtoF.py  CtoF_entry.py  GSP-Fire-Stations.csv  accumulator.py  bargraph.py  bargraph_coords.py  bmi.py  chaos-out.txt  chaos-seeds.txt  chaos.py  chaos_files.py  chaos_format.py  chasethemouse.py  chasethemouse_fns.py  color_entry.py  contacts.py  do_nothing.py  eligibility.py  formatdemo.py  futureval.py  futureval_files.py  futureval_graph.py  futureval_graph_if.py  futureval_in.txt  futureval_out.txt  futureval_while.py  graphical_aliasing.py  graphically_do_nothing.py  graphicsdemo.py  idmaker.py  idmaker_files.py  interactive_triangle.py  line_drawer.py  linegraph.py  loop_patterns.py  namegenerator.csv  numlist.txt  numlist_nested.txt  old_macdonald.py  (+6 more)
